--- a/views/pages/edit.ejs
+++ b/views/pages/edit.ejs
@@ -8,7 +8,7 @@
         <span class="sr-only">Loading...</span> 
     </div>
 </div>
-<div class="container invisible" id="data">
+<div class="container">
   <div class="card">
     <div class="card-body">
       <h4 class="card-title"><%= poster %></h4>
