--- a/views/pages/new.ejs
+++ b/views/pages/new.ejs
@@ -8,7 +8,7 @@
       <span class="sr-only">Loading...</span> 
   </div>
 </div>
-<div class="container invisible" id="data">
+<div class="container">
    <div class="row d-flex justify-content-center">
     <div class="btn-group col-xl-6 col-lg-6 col-md-8 col-sm-10 col-xs-12 col-12"
          role="group" aria-label="Basic example">
