--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -6,7 +6,7 @@
       <span class="sr-only">Loading...</span> 
     </div>
   </div>
-  <div class="container invisible" id="data">
+  <div class="container">
     <div class="card m-2 p-2">
         <i class="fa fa-user-circle w-25 h-25"></i>
         <a href="/user/<%= user._id %>/profile" class="text-decoration-none">
@@ -17,12 +17,37 @@
     </div>
     <% if(posts.length > 0){
       posts.forEach(post => { %>
-        <div class="card col-xl-8 col-lg-8 col-md-8 col-sm-10 col-xs-10 col-12">
+        <div class="card col-xl-8 col-lg-8 col-md-8 col-sm-10 col-xs-10 col-12 m-2">
           <div class="card-body">
-              <div class="row">
-                <a href="/user/<%= user._id %>/profile" class="text-decoration-none">
-                  <h4 class="card-title text-center"><%= user.name %></h4>
+              <div class="row main">
+                <a href="/user/<%= user._id %>/profile"
+                   class="text-decoration-none mr-xl-5 mr-lg-5 mr-md-5">
+                  <h4 class="card-title text-center">
+                    <i class="fa fa-user-circle"></i>
+                    <%= user.name %>
+                  </h4>
                 </a>
+                <% if(post.user.equals(currentUser._id)){ %>
+                  <div class="dropdown ml-xl-5 ml-lg-5 ml-md-5">
+                    <button class="btn btn-light" type="button"
+                            id="dropdownMenu1" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                      <i class="fas fa-angle-down text-center"></i>
+                    </button>
+                    <form action="/post/<%= post._id %>?_method=DELETE"
+                          method="post">
+                      <div class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                        <a class="dropdown-item btn btn-warning"
+                           href="/post/<%= post._id %>/edit">
+                          Edit
+                        </a>
+                        <button type="submit" class="dropdown-item btn btn-danger">
+                          Delete
+                        </button>
+                      </div>
+                    </form>
+                  </div>
+                <% } %>
               </div>
               <div class="row main">
                 <small class="text-black-50 text-center">
@@ -34,19 +59,7 @@
               </div>
               <div class="card-text m-3">
                 <p class="text-start"><%= post.content %></p>
-              </div>
-              <% if(post.user.equals(currentUser._id)){ %>
-                <hr class="col-*-10">
-                <form action="/post/<%= post._id %>?_method=DELETE"
-                      method="post" class="form-group">
-                  <a class="btn btn-warning" href="/post/<%= post._id %>/edit">
-                    Edit
-                  </a>
-                  <button type="submit" class="btn btn-danger">
-                    Delete
-                  </button>
-                </form>
-              <% } %>          
+              </div>          
           </div>
         </div>
       <% });
