--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -50,7 +50,7 @@
                  </h4>
               </a>
               <% if(currentUser._id.equals(post.user)){ %>
-                <div class="dropdown mr-auto">
+                <div class="dropdown">
                   <button class="btn btn-light" type="button"
                           id="dropdownMenu1" data-toggle="dropdown"
                           aria-haspopup="true" aria-expanded="false">
