--- a/views/pages/edit.ejs
+++ b/views/pages/edit.ejs
@@ -9,7 +9,7 @@
     </div>
 </div>
 <div class="container">
-  <div class="card">
+  <div class="card col-xl-6 col-lg-6 col-md-8 col-sm-10 col-xs-10 col-12 m-3">
     <div class="card-body">
       <h4 class="card-title"><%= poster %></h4>
       <form action="/post/<%= post._id %>?_method=put" method="post"
@@ -19,7 +19,7 @@
                  placeholder="Title of the post" value="<%= post.title %>">
         </div>
         <div class="form-group">
-          <textarea name="content" id="content" cols="30" rows="10">
+          <textarea name="content" id="content" class="w-100" rows="3">
             <%= post.content %>
           </textarea>
         </div>
