--- a/views/pages/new.ejs
+++ b/views/pages/new.ejs
@@ -24,7 +24,7 @@
           <input type="text" name="title" id="title" placeholder="Title of the post">
         </div>
         <div class="form-group">
-          <textarea name="content" id="content" cols="60" rows="7"></textarea>
+          <textarea name="content" id="content" class="w-100" rows="3"></textarea>
         </div>
         <div class="form-group">
           <button type="submit" class="btn btn-outline-primary">New Post</button>
