--- a/views/pages/new.ejs
+++ b/views/pages/new.ejs
@@ -21,10 +21,12 @@
       <h4 class="card-title"><%= currentUser.name %></h4>
       <form action="/" method="post" class="form-group">
         <div class="form-group">
-          <input type="text" name="title" id="title" placeholder="Title of the post">
+          <input type="text" name="title" class="form-control"
+                 id="title" placeholder="Title of the post">
         </div>
         <div class="form-group">
-          <textarea name="content" id="content" class="w-100" rows="3"></textarea>
+          <textarea name="content" id="content"
+                    class="form-control w-100" rows="3"></textarea>
         </div>
         <div class="form-group">
           <button type="submit" class="btn btn-outline-primary">New Post</button>
